edit: synchronized the '!etop' command with the last command changes